# orbit.lv2

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  manifest.ttl.in  meson.build  orbit.c  orbit.h  orbit.ttl  orbit_beatbox.c  orbit_cargoship.c  orbit_click.c  orbit_looper.c  orbit_monitor.c  orbit_pacemaker.c  orbit_quantum.c  orbit_subspace.c  orbit_tapdancer.c  orbit_timecapsule.c
cmake/: i686-w64-mingw32.cmake  x86_64-w64-mingw32.cmake
